err/django-wikiapp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_wikiapp-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wiki'...
Compiling './lib/python3.5/site-packages/wiki/management.py'...
***   File "./lib/python3.5/site-packages/wiki/management.py", line 23
    print "Skipping creation of NoticeTypes as notification app not found"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wiki/templates'...
Listing './lib/python3.5/site-packages/wiki/templates/feeds'...
Listing './lib/python3.5/site-packages/wiki/templates/notification'...
Listing './lib/python3.5/site-packages/wiki/templates/notification/wiki_article_edited'...
Listing './lib/python3.5/site-packages/wiki/templates/notification/wiki_observed_article_changed'...
Listing './lib/python3.5/site-packages/wiki/templates/notification/wiki_revision_reverted'...
Listing './lib/python3.5/site-packages/wiki/templates/wiki'...
Listing './lib/python3.5/site-packages/wiki/templatetags'...
Compiling './lib/python3.5/site-packages/wiki/templatetags/restructuredtext.py'...
***   File "./lib/python3.5/site-packages/wiki/templatetags/restructuredtext.py", line 17
    raise template.TemplateSyntaxError, "Error in {% restructuredtext %} filter: The Python docutils library isn't installed."
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wiki/templatetags/wikiurl.py'...
***   File "./lib/python3.5/site-packages/wiki/templatetags/wikiurl.py", line 49
    except NoReverseMatch, err:
                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
